fixed svg spacing

--- a/src/components/HomePage.scss
+++ b/src/components/HomePage.scss
@@ -33,6 +33,9 @@
     position: relative;
     bottom: 140px;
   }
+  .curve-1 {
+    bottom: 160px;
+  }
 }
 
 .content-1 {
